# NauEnginePublic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  run_tests.bat.in
cmake/for_build/: CMakeLists.txt  CMakePresets.json  check.cmake  run_install.bat
engine/3rdparty_libs/: CMakeLists.txt
engine/3rdparty_libs/EABase/: CMakeLists.txt
engine/3rdparty_libs/EASTL/: CMakeLists.txt
engine/3rdparty_libs/GameNetworkingSockets/: .gitignore  CMakeLists.txt  vc.bat  vcpkg.json
engine/3rdparty_libs/JoltPhysics/: CMakeLists.txt
engine/3rdparty_libs/ModifiedSonyMath/: CMakeLists.txt
engine/3rdparty_libs/RenderDoc/: CMakeLists.txt
engine/3rdparty_libs/adl_sdk/: CMakeLists.txt
engine/3rdparty_libs/asio/: CMakeLists.txt
engine/3rdparty_libs/binPack2D/: CMakeLists.txt
engine/3rdparty_libs/brotli/: CMakeLists.txt
engine/3rdparty_libs/dxc/: CMakeLists.txt
engine/3rdparty_libs/fast_float/: CMakeLists.txt
engine/3rdparty_libs/fmt/: CMakeLists.txt
engine/3rdparty_libs/fsr2/: CMakeLists.txt
engine/3rdparty_libs/gainput/: CMakeLists.txt
engine/3rdparty_libs/imgui/: CMakeLists.txt
engine/3rdparty_libs/ispc_texcomp/: CMakeLists.txt
engine/3rdparty_libs/jsoncpp/: CMakeLists.txt
engine/3rdparty_libs/libpng-libpng16/: CMakeLists.txt
engine/3rdparty_libs/lua/: CMakeLists.txt
engine/3rdparty_libs/lzma-9.20/: CMakeLists.txt
engine/3rdparty_libs/md5/: CMakeLists.txt
engine/3rdparty_libs/miniaudio/: CMakeLists.txt
engine/3rdparty_libs/ska_hash_map/: CMakeLists.txt
engine/3rdparty_libs/stb/: CMakeLists.txt
engine/3rdparty_libs/tiny-utf8/: CMakeLists.txt  README.md
engine/3rdparty_libs/tinydds/: CMakeLists.txt
engine/3rdparty_libs/tinygltf/: CMakeLists.txt
engine/3rdparty_libs/tinyimageformat/: CMakeLists.txt  tinyimageformat.h
engine/3rdparty_libs/uriparser/: CMakeLists.txt
engine/3rdparty_libs/utfcpp/: CMakeLists.txt
engine/3rdparty_libs/wyhash/: CMakeLists.txt
engine/3rdparty_libs/xxHash/: CMakeLists.txt
engine/3rdparty_libs/zlib-ng/: CMakeLists.txt
engine/3rdparty_libs/zstd-1.4.5/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/app_framework/: CMakeLists.txt
engine/core/kernel/: CMakeLists.txt  README.md
project_templates/empty/: .gitignore  CMakeLists.txt  project.nauproject  template.json
project_templates/empty/config/: app.json  scene.json  vfs.json
project_templates/empty/resources/: .gitignore
project_templates/empty/source/: main.cpp  pch.h
samples/: CMakeLists.txt
samples/all3rdpartyBuild/: CMakeLists.txt  main.cpp
samples/assetDbSample/: CMakeLists.txt  app_config_main.cpp  pch.h
samples/assetDbSample/assets_database/: database.db
samples/assetDbSample/config/: assetdb_sample.json
samples/assetPackSample/: CMakeLists.txt  asset_pack_sample_main.cpp  pch.h
samples/inputDemo/: CMakeLists.txt  input_control_component.h  input_demo.cpp  input_rotate_component.h  input_test.h  pch.h
samples/inputDemo/config/: input_demo.json
samples/kernelBuild/: CMakeLists.txt  main.cpp
samples/minimalApp/: CMakeLists.txt  app_sample_main.cpp
samples/networkTransport/: CMakeLists.txt  network_transport_configure.cpp  network_transport_main.cpp  network_transport_scene.cpp  network_transport_sceneobject.cpp  network_transport_tests.cpp  pch.h  run.bat
samples/networkTransport/config/: network_demo.json
samples/physics/: CMakeLists.txt  main.cpp  pch.h  sample_component.cpp  sample_component.h
samples/physics/config/: physics_demo.json
samples/sample_common/: CMakeLists.txt  pch.h
samples/sample_common/src/: sample_app_delegate.cpp
samples/sceneBase/: CMakeLists.txt  pch.h  sample_app_delegate.cpp  sample_config.h  sample_store_asset.cpp  scene_base_main.cpp  scene_loaders.h  texture_import_settings.cpp  texture_import_settings.h  transform_demo_scene.cpp
samples/sceneBase/config/: app.json  vfs.json
samples/sceneBase/content_source/: physics_scene.blend  scene_1.blend  teapot.blend
samples/sceneBase/sample_components/: asset_reloader.cpp  asset_reloader.h  scene_realoader.cpp  scene_reloader.h  window_maker.cpp  window_maker.h
samples/scriptUsage/: CMakeLists.txt  pch.h  scripts_sample_main.cpp
samples/scriptUsage/config/: scripts_demo.json
samples/uiSampleApp/Resources/: .gitignore
samples/uiSampleApp/config/: ui_sample_app.json
samples/uiSampleApp/src/: CMakeLists.txt  main.cpp  pch.h
tools/: CMakeLists.txt  build_tools.cmd  restore_packages.cmd  run_tests.cmd
tools/asset_pack_tool/: CMakeLists.txt
tools/asset_pack_tool/src/: asset_pack_builder.cpp  pch.h
tools/asset_tools/: CMakeLists.txt
tools/asset_tools/cmd/: CMakeLists.txt
tools/asset_tools/tests/: CMakeLists.txt  asset_tests.cpp  asset_tests_main.cpp
tools/asset_tools/tool/: CMakeLists.txt
tools/build_tools/: CMakeLists.txt
tools/build_tools/cmd/: CMakeLists.txt
tools/build_tools/tests/: CMakeLists.txt  build_tests.cpp  build_tests_main.cpp
tools/build_tools/tool/: CMakeLists.txt
tools/doc/: coding_style_guide.md
tools/material_creation_tool/: CMakeLists.txt  README.md  material_creation_tool_main.cpp  material_creator.cpp  material_creator.h  shader_pack.cpp  shader_pack.h
tools/project_tools/: CMakeLists.txt
tools/project_tools/cmd/: CMakeLists.txt
tools/project_tools/tests/: CMakeLists.txt  project_tests.cpp
tools/project_tools/tool/: CMakeLists.txt
tools/shader_compiler_tool/: CMakeLists.txt  README.md  shader_cache.h  shader_cache_builder.cpp  shader_cache_builder.h  shader_cache_from_asset.cpp  shader_cache_from_asset.h  shader_compiler.cpp  shader_compiler.h  shader_compiler_tool_main.cpp
tools/shared/: CMakeLists.txt
tools/shared/src/: file_system.cpp  logger.cpp  util.cpp  version.cpp
tools/usd_tools/: CMakeLists.txt
tools/usd_tools/plugins/: CMakeLists.txt
tools/usd_tools/usd_helpers/: CMakeLists.txt
tools/usd_tools/usd_meta_tools/: CMakeLists.txt
tools/usd_tools/usd_proxy/: CMakeLists.txt  usd_prim_proxy.cpp  usd_prim_proxy.h  usd_property_proxy.cpp  usd_property_proxy.h  usd_proxy.h  usd_proxy_api.h  usd_stage_watcher.h  (+3 more)
(+2584 files in other folders)
